--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charmi Restaurant</title>
-    <link rel="stylesheet" href="style copy.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>+
@@ -73,7 +73,7 @@
         <input type="submit" id="submit" value="Submit">
     </form>
 
-    <script src="sc copy.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
